@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.keimons.dmq'
+group 'com.keimons.dispatcher'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -11,10 +11,28 @@ repositories {
 
 dependencies {
     implementation 'org.jetbrains:annotations:23.0.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.9.0'
+}
+
+def compileArgs = ['--add-exports', 'java.base/jdk.internal.vm.annotation=com.keimons.dispatcher.core']
+
+compileJava {
+    options.compilerArgs += compileArgs
+}
+
+def testArgs = ['--add-exports', 'com.keimons.dispatcher.core/com.keimons.dispatcher.core.internal=com.keimons.dispatcher.test']
+
+compileTestJava {
+    options.compilerArgs += testArgs
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs += testArgs
+}
+
+javadoc {
+    options.encoding = "UTF-8"
+    options.charSet = "UTF-8"
 }
